# facit

./: .gitignore  CITATION.cff  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: main.yml  release-pypi.yml  test.yml
conda-recipe/: meta.yaml
src/facit/: modelling.py  processing.py  recording.py  testing.py
src/pangolin/_pyinstaller_hooks/stdhooks/: hook-OCP.py
tests/: test_recording.py  test_smoke.py
