[metadata]
name = pangolin
url = https://github.com/ovidner/pangolin
maintainer = Olle Vidner
maintainer_email = olle@vidner.se
license = MIT

[options]
include_package_data = true
package_dir =
  =src
packages = find:
python_requires = >=3.7
setup_requires =
  setuptools_scm

[options.packages.find]
where=src

[options.entry_points]
pyinstaller40 =
  hook-dirs = pangolin._pyinstaller_hooks:get_hook_dirs
